Added UIColor and a second splitVC

--- a/VolunteerWebsites/Base.lproj/Main.storyboard
+++ b/VolunteerWebsites/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="H1p-Uh-vWS">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="NZw-Q2-4ir">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -34,13 +34,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" scalesPageToFit="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qwj-ZV-r1P">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="-22" width="600" height="622"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
                             </webView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Qwj-ZV-r1P" firstAttribute="top" secondItem="SYR-Wa-9uf" secondAttribute="bottom" constant="-64" id="Hcy-WC-pVc"/>
+                            <constraint firstItem="Qwj-ZV-r1P" firstAttribute="top" secondItem="SYR-Wa-9uf" secondAttribute="bottom" constant="-86" id="Hcy-WC-pVc"/>
                             <constraint firstItem="GAO-Cl-Wes" firstAttribute="top" secondItem="Qwj-ZV-r1P" secondAttribute="bottom" id="a4P-iy-86w"/>
                             <constraint firstItem="Qwj-ZV-r1P" firstAttribute="leading" secondItem="svH-Pt-448" secondAttribute="leadingMargin" constant="-20" id="kaa-RL-oiQ"/>
                             <constraint firstAttribute="trailingMargin" secondItem="Qwj-ZV-r1P" secondAttribute="trailing" constant="-20" id="vP3-rP-4Jh"/>
@@ -54,16 +54,49 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FJe-Yq-33r" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="834" y="77"/>
+            <point key="canvasLocation" x="668" y="211"/>
         </scene>
-        <!--Split View Controller-->
+        <!--Master2-->
+        <scene sceneID="L2D-8G-wAM">
+            <objects>
+                <splitViewController title="Master2" id="BQ1-KW-lex" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="muT-Le-CJG"/>
+                    <connections>
+                        <segue destination="Koj-hV-5Qk" kind="relationship" relationship="detailViewController" id="yuH-jA-5yd"/>
+                        <segue destination="RMx-3f-FxP" kind="relationship" relationship="masterViewController" id="MNz-KS-NTr"/>
+                    </connections>
+                </splitViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wZS-yc-kRu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-886" y="529"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="Wca-yO-8Li">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vxw-cy-AZa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tabBarController id="NZw-Q2-4ir" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="tWZ-jc-Qzo">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="H1p-Uh-vWS" kind="relationship" relationship="viewControllers" id="YfX-zb-JKC"/>
+                        <segue destination="BQ1-KW-lex" kind="relationship" relationship="viewControllers" id="aZl-gM-DWf"/>
+                    </connections>
+                </tabBarController>
+            </objects>
+            <point key="canvasLocation" x="-1610" y="529"/>
+        </scene>
+        <!--Master1-->
         <scene sceneID="Nki-YV-4Qg">
             <objects>
-                <splitViewController id="H1p-Uh-vWS" sceneMemberID="viewController">
+                <splitViewController storyboardIdentifier="Master" title="Master1" id="H1p-Uh-vWS" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="Gf0-iv-sGx"/>
                     <toolbarItems/>
                     <connections>
                         <segue destination="RMx-3f-FxP" kind="relationship" relationship="masterViewController" id="BlO-5A-QYV"/>
-                        <segue destination="vC3-pB-5Vb" kind="relationship" relationship="detailViewController" id="Tll-UG-LXB"/>
+                        <segue destination="Koj-hV-5Qk" kind="relationship" relationship="detailViewController" id="pJ6-9V-MyT"/>
                     </connections>
                 </splitViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cZU-Oi-B1e" sceneMemberID="firstResponder"/>
@@ -107,9 +140,6 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <connections>
-                                    <segue destination="vC3-pB-5Vb" kind="showDetail" identifier="showDetail" id="6S0-TO-JiA"/>
-                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <sections/>
@@ -121,6 +151,7 @@
                     <navigationItem key="navigationItem" title="Places to Volunteer" id="Zdf-7t-Un8"/>
                     <connections>
                         <outlet property="segmentedControl" destination="Axt-2Y-atN" id="kUQ-jI-ad3"/>
+                        <segue destination="Koj-hV-5Qk" kind="show" identifier="showDetail" id="HDF-vl-YN7"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rux-fX-hf1" sceneMemberID="firstResponder"/>
@@ -128,22 +159,26 @@
             <point key="canvasLocation" x="709" y="-630"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="r7l-gg-dq7">
+        <scene sceneID="TUL-np-U4N">
             <objects>
-                <navigationController id="vC3-pB-5Vb" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="DjV-YW-jjY">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Koj-hV-5Qk" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="uiv-Ib-lT1">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
+                    <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="JEX-9P-axG" kind="relationship" relationship="rootViewController" id="GKi-kA-LjT"/>
+                        <segue destination="JEX-9P-axG" kind="relationship" relationship="rootViewController" id="MMY-JE-1ln"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="SLD-UC-DBI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wmk-WI-ufv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-45" y="129"/>
+            <point key="canvasLocation" x="-82" y="217"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="6S0-TO-JiA"/>
+        <segue reference="MNz-KS-NTr"/>
+        <segue reference="yuH-jA-5yd"/>
     </inferredMetricsTieBreakers>
 </document>
