Added 2 new splitviewcontrollers

--- a/VolunteerWebsites/Base.lproj/Main.storyboard
+++ b/VolunteerWebsites/Base.lproj/Main.storyboard
@@ -33,7 +33,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <webView contentMode="scaleToFill" scalesPageToFit="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qwj-ZV-r1P">
+                            <webView contentMode="scaleToFill" misplaced="YES" scalesPageToFit="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qwj-ZV-r1P">
                                 <rect key="frame" x="0.0" y="-22" width="600" height="622"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
                             </webView>
@@ -60,7 +60,7 @@
         <scene sceneID="L2D-8G-wAM">
             <objects>
                 <splitViewController title="Master2" id="BQ1-KW-lex" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="muT-Le-CJG"/>
+                    <tabBarItem key="tabBarItem" title="Health" image="Clinic-25" id="muT-Le-CJG"/>
                     <connections>
                         <segue destination="Koj-hV-5Qk" kind="relationship" relationship="detailViewController" id="yuH-jA-5yd"/>
                         <segue destination="RMx-3f-FxP" kind="relationship" relationship="masterViewController" id="MNz-KS-NTr"/>
@@ -68,12 +68,11 @@
                 </splitViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wZS-yc-kRu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-886" y="529"/>
+            <point key="canvasLocation" x="-838" y="-247"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Wca-yO-8Li">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="vxw-cy-AZa" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tabBarController id="NZw-Q2-4ir" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" id="tWZ-jc-Qzo">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
@@ -83,16 +82,19 @@
                     <connections>
                         <segue destination="H1p-Uh-vWS" kind="relationship" relationship="viewControllers" id="YfX-zb-JKC"/>
                         <segue destination="BQ1-KW-lex" kind="relationship" relationship="viewControllers" id="aZl-gM-DWf"/>
+                        <segue destination="3zv-kY-zVI" kind="relationship" relationship="viewControllers" id="Rq7-5M-7e2"/>
+                        <segue destination="RyL-DV-ISY" kind="relationship" relationship="viewControllers" id="3NE-xt-gzv"/>
                     </connections>
                 </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vxw-cy-AZa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1610" y="529"/>
+            <point key="canvasLocation" x="-1610" y="57"/>
         </scene>
         <!--Master1-->
         <scene sceneID="Nki-YV-4Qg">
             <objects>
                 <splitViewController storyboardIdentifier="Master" title="Master1" id="H1p-Uh-vWS" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="Gf0-iv-sGx"/>
+                    <tabBarItem key="tabBarItem" title="Homeless" image="Home-25" id="Gf0-iv-sGx"/>
                     <toolbarItems/>
                     <connections>
                         <segue destination="RMx-3f-FxP" kind="relationship" relationship="masterViewController" id="BlO-5A-QYV"/>
@@ -101,13 +103,13 @@
                 </splitViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cZU-Oi-B1e" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-856" y="-330"/>
+            <point key="canvasLocation" x="-856" y="-922"/>
         </scene>
         <!--Master-->
         <scene sceneID="smW-Zh-WAh">
             <objects>
                 <tableViewController title="Master" clearsSelectionOnViewWillAppear="NO" id="7bK-jq-Zjz" customClass="MasterViewController" customModule="VolunteerWebsites" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="r7i-6Z-zg0">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="82" sectionHeaderHeight="22" sectionFooterHeight="22" id="r7i-6Z-zg0">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -123,15 +125,15 @@
                             </connections>
                         </segmentedControl>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="Arm-wq-HPj" style="IBUITableViewCellStyleDefault" id="WCw-Qf-5nD">
-                                <rect key="frame" x="0.0" y="116" width="600" height="44"/>
+                            <tableViewCell contentMode="scaleAspectFit" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="Arm-wq-HPj" rowHeight="82" style="IBUITableViewCellStyleDefault" id="WCw-Qf-5nD">
+                                <rect key="frame" x="0.0" y="116" width="600" height="82"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WCw-Qf-5nD" id="37f-cq-3Eg">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="81.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Arm-wq-HPj">
-                                            <rect key="frame" x="15" y="0.0" width="570" height="43.5"/>
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" text="Title" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Arm-wq-HPj">
+                                            <rect key="frame" x="15" y="0.0" width="570" height="81.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -176,9 +178,43 @@
             </objects>
             <point key="canvasLocation" x="-82" y="217"/>
         </scene>
+        <!--Master3-->
+        <scene sceneID="EsJ-6f-8gf">
+            <objects>
+                <splitViewController title="Master3" id="3zv-kY-zVI" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Environmental" image="Leaf_25" id="yFY-Qr-3s6"/>
+                    <connections>
+                        <segue destination="RMx-3f-FxP" kind="relationship" relationship="masterViewController" id="bkP-o9-JxG"/>
+                        <segue destination="Koj-hV-5Qk" kind="relationship" relationship="detailViewController" id="wU5-8V-KX5"/>
+                    </connections>
+                </splitViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qwM-Yw-U95" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-846" y="447"/>
+        </scene>
+        <!--Master4-->
+        <scene sceneID="rre-wX-nyE">
+            <objects>
+                <splitViewController title="Master4" id="RyL-DV-ISY" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Animal" image="Cat Footprint-25" id="rhT-bt-mP7"/>
+                    <connections>
+                        <segue destination="RMx-3f-FxP" kind="relationship" relationship="masterViewController" id="XZj-86-loA"/>
+                        <segue destination="Koj-hV-5Qk" kind="relationship" relationship="detailViewController" id="oEE-tN-Ogq"/>
+                    </connections>
+                </splitViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Tie-fJ-t2k" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-800" y="1107"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="Cat Footprint-25" width="25" height="25"/>
+        <image name="Clinic-25" width="25" height="25"/>
+        <image name="Home-25" width="25" height="25"/>
+        <image name="Leaf_25" width="25" height="25"/>
+    </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="MNz-KS-NTr"/>
-        <segue reference="yuH-jA-5yd"/>
+        <segue reference="HDF-vl-YN7"/>
+        <segue reference="XZj-86-loA"/>
     </inferredMetricsTieBreakers>
 </document>
