--- a/VolunteerWebsites/Base.lproj/Main.storyboard
+++ b/VolunteerWebsites/Base.lproj/Main.storyboard
@@ -50,11 +50,36 @@
                     <navigationItem key="navigationItem" title="Register" prompt="" id="mOI-FS-AaM"/>
                     <connections>
                         <outlet property="uiWebView" destination="Qwj-ZV-r1P" id="mID-Vy-LgR"/>
+                        <segue destination="DDm-75-DwP" kind="show" identifier="showDirections" id="jK5-Kv-4aB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FJe-Yq-33r" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="668" y="211"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="sgG-PD-oJk">
+            <objects>
+                <viewController id="DDm-75-DwP" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Obv-ea-N5D"/>
+                        <viewControllerLayoutGuide type="bottom" id="6H8-NT-JQH"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="GF2-Gp-4EE">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ntk-t2-koe">
+                                <rect key="frame" x="20" y="96" width="560" height="484"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="r4E-gm-9aj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="709" y="1063"/>
         </scene>
         <!--Master2-->
         <scene sceneID="L2D-8G-wAM">
